<resources>
    <string name="app_name">tle2_app</string>

    <!--Content strings-->
    <string name="start_string">Welkom bij EVI</string>
    <string name="date">19 Dec</string>
    <string name="goal_message_false">Je hebt deze dag niet genoeg bewogen.</string>
    <string name="goal_message_true">Je hebt deze dag voldoende bewogen.</string>
    <string name="fysical_age_string">Je fysieke leeftijd van deze week is: </string>
    <string name="question_intro">Om een zo goed mogelijk advies te geven stellen wij je een paar vragen, probeer deze met eerlijkheid te beantwoorden.</string>

    <!--Notification messages-->
    <string name="notif_title">EVI</string>
    <string name="notif_daily">Je resultaat van vandaag staat klaar!</string>
    <string name="notif_weekly">Je rapport voor deze week staat klaar!</string>

    <!--Question strings-->
    <!--Questions-->
    <string name="questions_question1">Kun je de krant lezen?</string>
    <string name="questions_question2">Hoe vaak in de week kijk je tv?</string>
    <string name="questions_question3">Welke sport beoefen je?</string>
    <string name="questions_question4">Hoe vaak sport je wekelijks?</string>
    <string name="questions_question5">Hoe vaak ontbijt je wekelijks?</string>
    <string name="questions_question6">Rijd je nog zelfstandig op de fiets?</string>
    <string name="questions_question7">Hoe vaak fiets je in de week?</string>

    <!--Tips-->
    <string name="alert_tip1">Laat de krant eens liggen en ga iets anders doen!</string>
    <string name="alert_tip2">Ga eens buiten een rondje lopen!</string>
    <string name="alert_tip3">Probeer eens minder tv te kijken en iets anders te doen!</string>
    <string name="alert_tip4">Maak eens een wandeling</string>
    <string name="alert_tip5">Ga eens wat vaker naar de </string>
    <string name="alert_tip6">Stop eens wat meer tijd in het beoefenen van </string>
    <string name="alert_tip7">Ontbijt is de belangrijkste maaltijd van de dag, zorg dat je dit dus ook niet overslaat.</string>
    <string name="alert_tip8">Ga weer eens een rondje fietsen!</string>
    <string name="alert_tip9">Loop buiten eens een rondje!</string>
    <string name="alert_tip10">Probeer eens een derde keer te fietsen!</string>

    <!--Button strings-->
    <string name="gender_female">Vrouw</string>
    <string name="gender_male">Man</string>
    <string name="confirm">OK</string>
    <string name="start">START</string>
    <string name="yes">JA</string>
    <string name="no">NEE</string>
    <string name="tv_answer1">NOOIT</string>
    <string name="tv_answer2">SOMS</string>
    <string name="tv_answer3">VAAK</string>

    <!--Placeholder strings-->
    <string name="weight_placeholder">Vul hier je gewicht in (in kg)</string>
    <string name="length_placeholder">Vul hier je lengte in (in cm)</string>
    <string name="name_placeholder">Naam</string>
    <string name="age_placeholder">Leeftijd</string>
    <string name="sport_placeholder">Bijv. Voetbal, Tennis, Zwemmen</string>s

    <!--Toast strings-->
    <string name="noNameText">Je hebt geen naam ingevuld</string>
    <string name="noAgeText">Je hebt geen leeftijd ingevuld</string>
    <string name="noGenderText">Je hebt geen geslacht geselecteerd</string>
    <string name="noHeightText">Je hebt geen lengte ingevuld</string>
    <string name="noWeightText">Je hebt geen gewicht ingevuld</string>
    <string name="questionMissedText">Je hebt één of meer van de vragen niet beantwoord</string>

    <!--Test data-->
    <string name="TextViewTest">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. \n
    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. \n
    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. \n
    Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="BMITest">20.5</string>
    <string name="lengthTest">180</string>


</resources>

